[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/misc/LaserTilemap.tres" type="TileSet" id=1]
[ext_resource path="res://scripts/Laser.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/Laser_particles.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 64 )

[node name="Laser" type="Node2D"]
script = ExtResource( 2 )

[node name="LaserOn" type="TileMap" parent="."]
position = Vector2( 16, 0 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262144, 0, 0, -196608, 1, 0, -131072, 1, 0, -65536, 2, 0 )

[node name="KillArea" type="Area2D" parent="LaserOn"]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserOn/KillArea"]
position = Vector2( 15.058, -64 )
scale = Vector2( 0.326, 1 )
shape = SubResource( 1 )

[node name="LaserParticles" parent="LaserOn" instance=ExtResource( 3 )]
position = Vector2( 8, -32 )

[node name="LaserOff" type="TileMap" parent="."]
visible = false
position = Vector2( 16, 0 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262144, 4, 0, -65536, 3, 0 )

[connection signal="body_entered" from="LaserOn/KillArea" to="." method="_on_KillArea_body_entered"]
